--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -891,8 +891,8 @@ input[type="tel"],
 input[type="number"],
 select,
 textarea {
-  background: rgba(255,255,255,.5);
-  border: 1px #fff solid;
+  background: rgba(218, 255, 219, 0.5);
+  border: 1px rgb(89, 156, 104) solid;
   border-radius: 5px;
   padding: 10px;
   font-size: 1rem;
