--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -787,92 +787,12 @@ text-fill-color: transparent;
 
 
 
-/*吹き出し*/
-.balloon_l,
-.balloon_r{
-  margin: 30px 20px;
-  display:flex;
-  justify-content: flex-start;
-  align-items: flex-start; /*縦位置を上揃え*/
-  /* max-width: 90%; */
-/*   align-items: center; */ /*縦位置を真ん中揃え*/
-}
-.balloon_r{
-  justify-content:flex-end;
-}
-.faceicon img{
-  width: 65px; /*任意のサイズ*/
-  height: auto;
-  border-radius: 50%;
-}
-.balloon_r .faceicon{
-  margin-left:25px;
-}
-.balloon_l .faceicon{
-  margin-right:25px;
-}
-.balloon_r .faceicon{
-  order:2 !important;
-  /* order:2; */
-}
-.says {
-  max-width:180px; /*最大幅は任意*/
-  display: flex;
-  flex-wrap: wrap;
-  position: relative;
-  padding: 17px 13px 15px 18px;
-  border-radius: 12px;
-  background: #d4f4f4;/*色は任意*/
-  box-sizing:border-box;
-  margin:0 !important;
-  /* margin:0; */
-  line-height:1.5;
-  font-size: 0.8rem;
-/*   align-items: center; */
-}
-.says p{
-  /* margin:8px 0 0 !important;  */
-  margin:8px 0 0 ; 
-}
-.says p:first-child{
-  margin-top:0;
-  /* margin-top:0 !important; */
-}
-.says:after {
-  content: "";
-  position: absolute;
-  border: 10px solid transparent;
-/*   margin-top:-3px;  */
-}
-.balloon_l .says:after {
-  left: -26px;
-  border-right: 22px solid #d4f4f4;
-}
-.balloon_r .says:after {
-  right: -26px;
-  border-left: 22px solid #d4f4f4;
-}
-
-.chat_name {
-  font-size: xx-small;
-  text-align: center;
-  margin-top: 6px;
-}
-
-.tiny {
-  font-size: x-small;
-}
-
-.speech_balloon {
-  max-width: 100%;
-}
-
 
 /* CONTACT
 ------------------------------- */
 #contact {
   min-height: 100vh;
-  color:#000
+  color:#111; 
 }
 
 /* フォーム */
@@ -883,6 +803,7 @@ label {
   font-size: 1.125rem;
   margin-bottom: 10px;
   display: block;
+  
 }
 
 input[type="text"],
