--- a/docs/css/contact.css
+++ b/docs/css/contact.css
@@ -5,7 +5,7 @@ COLORS
 ================================================ */
 :root {
   --text: #333;
-  --bg: #fff;
+  --bg: #ffe5ae;
   --video-opacity: 0.5;
 }
 @media (prefers-color-scheme: dark) {
@@ -633,110 +633,6 @@ iframe {
   }
 }
 
-/*==================================================
-スライダーのためのcss
-===================================*/
-.slider {
-  /*横幅94%で左右に余白を持たせて中央寄せ*/
-  width: 94%;
-  margin: 0 auto;
-  z-index: 2;
-}
-
-.slider img {
-  width: 100%; /*スライダー内の画像を横幅100%に*/
-  height: auto;
-}
-
-/*slickのJSで書かれるタグ内、スライド左右の余白調整*/
-
-.slider .slick-slide {
-  margin: 0 10px;
-}
-
-.slider li p {
-  font-size: medium;
-}
-/*矢印の設定*/
-
-/*戻る、次へ矢印の位置*/
-.slick-prev,
-.slick-next {
-  position: absolute; /*絶対配置にする*/
-  top: 42%;
-  cursor: pointer; /*マウスカーソルを指マークに*/
-  outline: none; /*クリックをしたら出てくる枠線を消す*/
-  border-top: 2px solid #666; /*矢印の色*/
-  border-right: 2px solid #666; /*矢印の色*/
-  height: 15px;
-  width: 15px;
-}
-
-.slick-prev {
-  /*戻る矢印の位置と形状*/
-  left: -1.5%;
-  transform: rotate(-135deg);
-}
-
-.slick-next {
-  /*次へ矢印の位置と形状*/
-  right: -1.5%;
-  transform: rotate(45deg);
-}
-
-/*ドットナビゲーションの設定*/
-
-.slick-dots {
-  text-align: center;
-  margin: 20px 0 0 0;
-}
-
-.slick-dots li {
-  display: inline-block;
-  margin: 0 5px;
-}
-
-.slick-dots button {
-  color: transparent;
-  outline: none;
-  width: 8px; /*ドットボタンのサイズ*/
-  height: 8px; /*ドットボタンのサイズ*/
-  display: block;
-  border-radius: 50%;
-  background: #ccc; /*ドットボタンの色*/
-}
-
-.slick-dots .slick-active button {
-  background: #333; /*ドットボタンの現在地表示の色*/
-}
-
-.blue {
-  color: rgb(56, 209, 201);
-}
-
-.small {
-  font-size: smaller;
-}
-
-.max-heigth {
-  max-height: 420px;
-}
-
-
-.mincho {
-  font-family: 'Shippori Mincho', serif;
-}
-
-
-.triangle {
-  display: table;
-  width: 100%;
-  height: 500px;
-  background-color: #fcecbc;
-  transform: skewY(-2deg);
-  margin-top: 10vw;
-  border-radius: 10px;
-}
 
 /*
 SPEAKERS
@@ -799,6 +695,23 @@ text-fill-color: transparent;
 form div {
   margin-bottom: 14px;
 }
+
+/* input[type="text"],
+input[type="email"],
+input[type="date"],
+input[type="tel"],
+input[type="number"],
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: transparent;
+  border: none;
+  border-radius: 0;
+  font: inherit;
+  outline: none;
+} */
+
 label {
   font-size: 1.125rem;
   margin-bottom: 10px;
